--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   <body>
     <nav>
       <h1>JANE DOE</h1>
+      <button class="burger-menu" id="burger-menu">
+        <ion-icon class="bars" name="menu-outline"></ion-icon>
+        <!-- <ion-icon class="times" name="close-outline"></ion-icon> -->
+      </button>
+
       <ul class="navigation">
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
@@ -43,13 +48,10 @@
         nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
         autem deleniti cupiditate molestias quis unde quae totam porro dicta
         iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
-        soluta aperiam expedita inventore error consequuntur iste fugit pariatur
-        quos aliquam ea?
       </p>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
-        nostrum dolor minus, libero delectus praesentium perferendis architecto
-        vel ut eius.
+        nostrum dolor minus, libero delectus praesentium perferendis
       </p>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
@@ -95,7 +97,7 @@
     </section>
 
     <section class="projects">
-      <h2 class="projects-title">Some of my Projects</h2>
+      <h2 class="projects-title">Some of my Recent Projects</h2>
       <div class="projects-container">
         <div class="project-container project-card">
           <img
@@ -211,7 +213,10 @@
     </div>
 
     <i class="scroll-up" id="scroll-up"
-      ><img src="assets/icons/icons8-upward-arrow.gif" class="socicon up-arrow" alt=""
+      ><img
+        src="assets/icons/icons8-upward-arrow.gif"
+        class="socicon up-arrow"
+        alt=""
     /></i>
 
     <footer>
