Fixed more responsiveness issues

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    <!-- Navbar -->
     <nav>
       <h1>JANE DOE</h1>
       <button class="burger-menu" id="burger-menu">
@@ -28,6 +29,7 @@
       </ul>
     </nav>
 
+    <!-- Heror Section -->
     <section class="hero">
       <img src="assets/images/wfh_1.svg" alt="jane-doe" class="hero-img" />
       <div class="bio">
@@ -41,6 +43,7 @@
       </div>
     </section>
 
+    <!-- More about -->
     <section class="more-about">
       <h2>More About Me</h2>
       <p>
@@ -59,43 +62,50 @@
       </p>
     </section>
 
+    <!-- Skills section -->
     <section class="skills">
       <h2 class="skill-header">My Top Skills</h2>
 
       <div class="skills-wrapper">
-        <img
-          src="assets/icons/icons8-html-5.svg"
-          alt=""
-          class="icon icon-card"
-        />
-        <img src="assets/icons/icons8-css3.svg" alt="" class="icon icon-card" />
-        <img
-          src="assets/icons/icons8-javascript.svg"
-          alt=""
-          class="icon icon-card"
-        />
-        <br />
-        <img
-          src="assets/icons/icons8-bootstrap.svg"
-          alt=""
-          class="icon icon-card"
-        />
-        <img
-          src="assets/icons/icons8-react-native.svg"
-          alt=""
-          class="icon icon-card"
-        />
-        <img src="assets/icons/icons8-git.svg" alt="" class="icon icon-card" />
+        <div class="first-set">
+          <img
+            src="assets/icons/icons8-html-5.svg"
+            alt=""
+            class="icon icon-card"
+          />
+          <img
+            src="assets/icons/icons8-css3.svg"
+            alt=""
+            class="icon icon-card"
+          />
+          <img
+            src="assets/icons/icons8-javascript.svg"
+            alt=""
+            class="icon icon-card"
+          />
+        </div>
+
+        <div class="second-set">
+          <img
+            src="assets/icons/icons8-bootstrap.svg"
+            alt=""
+            class="icon icon-card"
+          />
+          <img
+            src="assets/icons/icons8-react-native.svg"
+            alt=""
+            class="icon icon-card"
+          />
+          <img
+            src="assets/icons/icons8-git.svg"
+            alt=""
+            class="icon icon-card"
+          />
+        </div>
       </div>
-      <!-- <i class="fab fa-html5"></i>
-      <i class="fab fa-css3"></i>
-      <i class="fab fa-js"></i>
-      <i class="fab fa-bootstrap"></i>
-      <i class="fab fa-react"></i>
-      <i class="fab fa-git-square"></i>
-      <i class="fab fa-github-square"></i> -->
     </section>
 
+    <!-- Projects section -->
     <section class="projects">
       <h2 class="projects-title">Some of my Recent Projects</h2>
       <div class="projects-container">
@@ -144,6 +154,7 @@
       </div>
     </section>
 
+    <!-- Contact section -->
     <section class="contact">
       <h2>Get In Touch With Me</h2>
       <div class="contact-form-container">
@@ -188,6 +199,7 @@
       </div>
     </section>
 
+    <!-- Social accounts - Fixed to the right -->
     <div class="socials">
       <a href="#" target="_blank"
         ><img
@@ -212,6 +224,7 @@
       /></a>
     </div>
 
+    <!-- Scroll to top -->
     <i class="scroll-up" id="scroll-up"
       ><img
         src="assets/icons/icons8-upward-arrow.gif"
@@ -219,6 +232,7 @@
         alt=""
     /></i>
 
+    <!-- Footer section -->
     <footer>
       <p class="copy">&copy; Copyright 2021</p>
       <p class="copy">
@@ -229,7 +243,10 @@
       </p>
     </footer>
 
+    <!-- Website scripts -->
     <script src="assets/js/app.js"></script>
+
+    <!-- Ion icons scripts -->
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
