Fixed more issues

--- a/index.html
+++ b/index.html
@@ -33,10 +33,6 @@
     <!-- Navbar -->
     <nav>
       <h1>JANE DOE</h1>
-      <button class="burger-menu" id="burger-menu">
-        <ion-icon class="bars" name="menu-outline"></ion-icon>
-        <!-- <ion-icon class="times" name="close-outline"></ion-icon> -->
-      </button>
 
       <ul class="navigation">
         <li><a href="#about" class="nav-link">About</a></li>
@@ -44,9 +40,13 @@
         <li><a href="#projects" class="nav-link">Projects</a></li>
         <li><a href="#contact" class="nav-link">Contact</a></li>
       </ul>
+      <button class="burger-menu" id="burger-menu">
+        <ion-icon class="bars" name="menu-outline"></ion-icon>
+        <!-- <ion-icon class="times" name="close-outline"></ion-icon> -->
+      </button>
     </nav>
 
-    <!-- Heror Section -->
+    <!-- Hero Section -->
     <section class="hero" id="about">
       <img src="assets/images/wfh_1.svg" alt="jane-doe" class="hero-img" />
       <div class="bio animate__animated animate__shakeX">
