Added lazy loading

--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
 
     <!-- Hero Section -->
     <section class="hero" id="about">
-      <img src="assets/images/wfh_1.svg" alt="jane-doe" class="hero-img" />
+      <img
+        src="assets/images/wfh_1.svg"
+        alt="jane-doe"
+        loading="lazy"
+        class="hero-img"
+      />
       <div class="bio animate__animated animate__shakeX">
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
@@ -87,16 +92,19 @@
           <img
             src="assets/icons/icons8-html-5.svg"
             alt=""
+            loading="lazy"
             class="icon icon-card"
           />
           <img
             src="assets/icons/icons8-css3.svg"
             alt=""
+            loading="lazy"
             class="icon icon-card"
           />
           <img
             src="assets/icons/icons8-javascript.svg"
             alt=""
+            loading="lazy"
             class="icon icon-card"
           />
         </div>
@@ -105,16 +113,19 @@
           <img
             src="assets/icons/icons8-bootstrap.svg"
             alt=""
+            loading="lazy"
             class="icon icon-card"
           />
           <img
             src="assets/icons/icons8-react-native.svg"
             alt=""
+            loading="lazy"
             class="icon icon-card"
           />
           <img
             src="assets/icons/icons8-git.svg"
             alt=""
+            loading="lazy"
             class="icon icon-card"
           />
         </div>
@@ -129,6 +140,7 @@
           <img
             src="assets/images/expenseTracker.png"
             alt="expense-tracker"
+            loading="lazy"
             class="project-pic"
           />
           <h3 class="project-title">Expense Tracker</h3>
@@ -143,6 +155,7 @@
           <img
             src="assets/images/netflixClone.png"
             alt="netflic-clone"
+            loading="lazy"
             class="project-pic"
           />
           <h3 class="project-title">Netflix Clone</h3>
@@ -157,6 +170,7 @@
           <img
             src="assets/images/greenyEarth.png"
             alt="greeny-earth"
+            loading="lazy"
             class="project-pic"
           />
           <h3 class="project-title">Greeny Earth</h3>
@@ -227,18 +241,21 @@
         ><img
           src="assets/icons/icons8-twitter-circled.gif"
           alt="Twitter"
+          loading="lazy"
           class="socicon"
       /></a>
       <a href="#" target="_blank"
         ><img
           src="assets/icons/icons8-instagram.gif"
           alt="Instagram"
+          loading="lazy"
           class="socicon"
       /></a>
       <a href="#" target="_blank"
         ><img
           src="assets/icons/icons8-linkedin-circled.gif"
           alt="Linkedin"
+          loading="lazy"
           class="socicon"
       /></a>
       <a href="#" target="_blank"
